<resources>
    <string name="app_name">Lightning Mail</string>
    <string name="text_user">User</string>
    <string name="text_pass">Pass</string>
    <string name="title_activity_usuario_registrado">UserRegistred</string>
    <string name="opcEditar">Edit</string>
    <string name="opcBorrar">Delete</string>
    <string name="action_settings">Options</string>
    <string name="action_exit">Exit</string>
    <string name="action_contact">Provider</string>
    <string name="action_add">Add new element</string>
    <string name="title_activity_nuevo_objeto">NewObject</string>
    <string name="valor_num">High [0-3]</string>
    <string name="valor_dest">To</string>
    <string name="valor_mensaje">Message</string>
    <string name="mgsborrar">Do you delete this message?</string>
    <string name="ok">OK</string>
    <string name="action_show">Show</string>
    <string name="msgerror">Invalid Field. Try again</string>
    <string name="msgexit">Back...</string>
    <string name="projecto">Lightning App</string>
    <string name="action_see">Mail</string>
    <string name="msgadd">Message add!</string>
    <string name="regis">Log in...</string>
    <string name="llamar">CALL</string>
    <string name="remuser">Remember user</string>
    <string name="login">Log In</string>
    <string name="Welcome">Welcome</string>
    <string name="msgend">Login successfull!</string>
    <string name="sesion">Last session:</string>
    <string name="Expand">Expand</string>
    <string name="Drop">Vaciar</string>
    <string name="SEND">ENVIAR</string>
    <string name="writter">Writter:</string>

</resources>
