<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Main">

    <item android:id="@+id/action_see"
        android:title="@string/action_see"
        android:icon="@mipmap/eye"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@mipmap/emailadd"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_contact"
        android:title="@string/action_contact"
        android:icon="@mipmap/contact"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_opedit"
        android:title="@string/action_opedit"
        app:showAsAction="never"/>
    />
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
        />


</menu>