<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:clickable="false"
    android:background="@mipmap/screen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="481dp"
        android:background="#00060606"
        android:layout_gravity="top|center_vertical"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f6ffffff">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageView2"
                android:adjustViewBounds="true"
                android:src="@mipmap/e_mail" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Writter"
                    android:layout_weight="0"
                    android:textAlignment="center"
                    android:id="@+id/txt_emisor"
                    android:layout_marginTop="50dp"
                    android:textSize="25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/txt_useremisor"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="10dp"
                    android:text=" "
                    android:textSize="25dp"
                    android:textColor="#a000efdb" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_gravity="center"
            android:background="#f6ffffff"
            android:layout_marginTop="50dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etxt_nota"
                android:hint="@string/valor_num"
                android:maxLength="1"
                android:editable="false"
                android:textAlignment="center"
                android:textColor="#a000efdb"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etxt_destinatario"
                android:hint="@string/valor_dest"
                android:editable="false"
                android:inputType="text"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:autoText="false"
                android:textAlignment="center"
                android:textColor="#a000efdb" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etxt_mensaje"
                android:hint="@string/valor_mensaje"
                android:maxLength="100"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:textColor="#a000efdb"
                android:layout_marginTop="25dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ENVIAR"
                android:id="@+id/btn_enviar"
                android:textAlignment="center"
                android:layout_gravity="top|left|right|center_horizontal"
                android:background="@color/background_floating_material_dark"
                android:textColor="#f6ffffff" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>